Update azure-pipelines-1.yml for Azure Pipelines
ghjghj

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,9 +1,4 @@
 # Python package
-- task: Priyanka@1
-  inputs:
-    apikey: 'ghfgh'
-    apisecret: 'fhfgh'
-    testid: 'fghfgh'
 # Create and test a Python package on multiple Python versions.
 # Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
@@ -39,3 +34,11 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest
   displayName: 'pytest'
+
+
+
+- task: Priyanka@1
+  inputs:
+    apikey: 'hgj'
+    apisecret: 'ghjgj'
+    testid: 'ghjghj'
