--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,5 +18,9 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
+- task: Priyanka@1
+  inputs:
+    apikey: 'aa'
+    apisecret: 'dd'
+    testid: 'ff'
 
-  
