Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -20,6 +20,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'hj'
-    apisecret: 'ghj'
-    testid: 'hjgh'
+    apikey: 'dfsfsd'
+    apisecret: 'sdfsdf'
+    testid: 'sdfsdf'
