--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -18,4 +18,8 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-  
+- task: Priyanka@1
+  inputs:
+    apikey: 'sdfds'
+    apisecret: 'sdfs'
+    testid: 'dfsdf'
