Update azure-pipelines-3.yml for Azure Pipelines

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -20,6 +20,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'sdfds'
-    apisecret: 'sdfs'
-    testid: 'dfsdf'
+    apikey: 'ghfg'
+    apisecret: 'fghfh'
+    testid: 'fghfg'
