--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -20,6 +20,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'ghfg'
-    apisecret: 'fghfh'
-    testid: 'fghfg'
+    apikey: 'mmmmmmm'
+    apisecret: 'm'
+    testid: 'mmm'
