--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -37,6 +37,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'bfg'
-    apisecret: 'hfghfh'
-    testid: 'fghfgh'
+    apikey: 'gj'
+    apisecret: 'hjghj'
+    testid: 'ghjgh'
