Update azure-pipelines-7.yml for Azure Pipelines

--- a/azure-pipelines-7.yml
+++ b/azure-pipelines-7.yml
@@ -35,7 +35,8 @@ steps:
     pytest
   displayName: 'pytest'
 
-- task: runscopetest@1
+- task: Priyanka@1
   inputs:
-    triggerUrl: 'fgh'
-    accessToken: 'fghfgh'
+    apikey: 'hjkh'
+    apisecret: 'hjk'
+    testid: 'hjk'
