--- a/azure-pipelines-7.yml
+++ b/azure-pipelines-7.yml
@@ -37,6 +37,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'ghj'
-    apisecret: 'ghjg'
-    testid: 'ghj'
+    apikey: 'hjk'
+    apisecret: 'hjk'
+    testid: 'hjk'
