Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,9 @@ steps:
     apikey: 'gbn'
     apisecret: 'bvnvb'
     testid: 'nvbn'
+
+- task: Priyanka@1
+  inputs:
+    apikey: 'hjk'
+    apisecret: 'hjk'
+    testid: 'hjk'
