--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,6 @@ steps:
 
 - task: Priyanka@1
   inputs:
-    apikey: 'hjk'
-    apisecret: 'hjk'
-    testid: 'hjk'
+    apikey: 'hku'
+    apisecret: 'khkh'
+    testid: 'jkhjk'
